fixed overflow:hidden hiding the whole torrentname div in newer versions of chrome

--- a/static/style.css
+++ b/static/style.css
@@ -71,15 +71,13 @@ body {
 }
 .torrentname {
 	max-width: 250px;
-}
-.torrentnamediv {
-	width: 100%;
-	height: 100%;
-	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
 }
 .torrentname a {
+	width: 100%;
+	height: 100%;
+	white-space: nowrap;
 	color: inherit;
 }
 .torrentid, .torrentstatus, .torrentpercent, .torrentsize, .torrentratio {
